--- a/res/drawable-hdpi/rounded_corner.xml
+++ b/res/drawable-hdpi/rounded_corner.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners  android:radius="50dp"/>
-    <solid android:color="@color/red"></solid>
+    <solid android:color="@color/red"/>
+    <padding
+        android:left="20dp"
+        android:bottom="20dp" />
+    
 </shape>
